--- a/python/PyQt6/core/auto_generated/stac/qgsstacasset.sip.in
+++ b/python/PyQt6/core/auto_generated/stac/qgsstacasset.sip.in
@@ -8,8 +8,7 @@
 
 
 
-
-class QgsStacAsset
+class QgsStacAsset : QgsFeatureAsset
 {
 %Docstring(signature="appended")
 Class for storing a STAC asset's data.
@@ -21,67 +20,16 @@ Class for storing a STAC asset's data.
 #include "qgsstacasset.h"
 %End
   public:
-    QgsStacAsset( const QString &href,
+    QgsStacAsset();
+
+    QgsStacAsset( const QString &id, const QString &href,
                   const QString &title,
                   const QString &description,
                   const QString &mediaType,
-                  const QStringList &roles );
-%Docstring
-Constructor
-%End
-
-    QString href() const;
-%Docstring
-Returns the URI to the asset object
-%End
-
-    QString title() const;
-%Docstring
-Returns the displayed title for clients and users.
-%End
-
-    QString description() const;
-%Docstring
-Returns a description of the Asset providing additional details, such as
-how it was processed or created. CommonMark 0.29 syntax MAY be used for
-rich text representation.
-%End
-
-    QString mediaType() const;
-%Docstring
-Returns the media type of the asset
-%End
-
-    QStringList roles() const;
-%Docstring
-Returns the roles assigned to the asset. Roles are used to describe the
-purpose of the asset (eg. thumbnail, data etc).
-%End
-
-    bool isCloudOptimized() const;
-%Docstring
-Returns whether the asset is in a cloud optimized format like COG or
-COPC
-
-.. versionadded:: 3.42
-%End
-
-    QString formatName() const;
-%Docstring
-Returns the format name for cloud optimized formats
-
-.. versionadded:: 3.42
-%End
-
-    QgsMimeDataUtils::Uri uri() const;
-%Docstring
-Returns a uri for the asset if it is a cloud optimized file like COG or
-COPC
-
-.. versionadded:: 3.42
-%End
-
+                  const QStringList &roles = QStringList(),
+                  const QVariantMap &metadata = QVariantMap() );
 };
+
 
 /************************************************************************
  * This file has been generated automatically from                      *
